--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_URL=https://buhqrxesneunapkhjhwx.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_p08U_8826wftqZ-jAY0atw_V8opPDzE
-NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=your-walletconnect-id
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=a6ec0e351a96e64fb935721c1a92afc7
