--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@rainbow-me/rainbowkit": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.45.0",
     "@tailwindcss/postcss": "^4.1.17",
@@ -26,8 +27,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "encoding": "^0.1.13",
+    "lokijs": "^1.5.12",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
+    "next-themes": "^0.4.6",
+    "pino-pretty": "^13.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.7",
@@ -48,5 +53,9 @@
     "tailwindcss": "^4.0.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "lit": "^3.3.0",
+    "@lit/reactive-element": "^2.0.0"
   }
 }
