--- a/package.json
+++ b/package.json
@@ -27,12 +27,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "encoding": "^0.1.13",
-    "lokijs": "^1.5.12",
     "lucide-react": "^0.468.0",
-    "next": "^16.0.3",
+    "next": "15.1.0",
     "next-themes": "^0.4.6",
-    "pino-pretty": "^13.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.7",
@@ -51,11 +48,6 @@
     "postcss": "^8",
     "prettier": "^3.4.2",
     "tailwindcss": "^4.0.0",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
-  },
-  "overrides": {
-    "lit": "^3.3.0",
-    "@lit/reactive-element": "^2.0.0"
   }
 }
